FinalDevops/final-devops-project/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: devops-final
  labels:
    pod-security.kubernetes.io/enforce: restricted
