FinalDevops/final-devops-project/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notes-api
  namespace: devops-final
  labels: { app: notes-api }
spec:
  selector: { app: notes-api }
  ports:
    - name: http
      port: 80
      targetPort: http
